@@ -64,5 +64,5 @@ fix boxes and scaling so they adapt to scale changes
 
 R functions as mouse actions
 
-
+Fix arg names like col.axis, etc in plot3d and related functions
 
