@@ -158,3 +158,4 @@ v0.67-2
 v0.67-3
   - fixed sphere drawing so spheres are spheres regardless of par3d("scale")
   - added type="s" to plot3d to draw spheres
+  - fixed handling of "..." in axis related functions
